--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
         <div>
         </div>
     </div><!-- end #keyboard -->
-    <a href="https://ko-fi.com/yairhasfari">
+    <a href="green.gilad@gmail.com">
     <div id="coffee">
         ☕ אפשר להזמין אותי לקפה  
     </div></a>
