--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <img src="question-mark.svg"  onclick="openInstructions()">
         </button></div>
         <div>
-            <h1 class="title">וורדל׳ה</h1>
+            <h1 class="title">וורדלשודו</h1>
         </div>
         <div>
             <img src="wordale-favicon-new.png">
