--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 height: 50px;
                 font-family: 'Secular One';
                 overflow: hidden;
-                font-size:clamp(0.5vw,5vw,17px);
+                font-size:clamp(0.5vw,5vw,20px);
 
 
             }
@@ -64,7 +64,7 @@
             
             }
             #topBar img{
-                width:clamp(0.5vw,13vw,50px);
+                width:clamp(0.5vw,13vw,60px);
                 
             }
         </style>
@@ -72,7 +72,7 @@
             <img src="question-mark.svg"  onclick="openInstructions()">
         </button></div>
         <div>
-            <h1 class="title">וורדלשודו</h1>
+            <h1 class="title">שוּדוּ וור ְדל</h1>
         </div>
         <div>
             <img src="wordale-favicon-new.png">
