--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
     <div id="topBar">
         <style>
-
+padding-top:10px;
             #topBar {
                 margin: auto;
                 display: flex;
