--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ padding-top:10px;
             <img src="question-mark.svg"  onclick="openInstructions()">
         </button></div>
         <div>
-            <h1 class="title">שוּדוּ וור ְדל</h1>
+            <h1 class="title">שוּדוּ וורדל</h1>
         </div>
         <div>
             <img src="wordale-favicon-new.png">
