--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </style>
        
         <div>
-            <h1 class="title">שוּדוּ וורדל</h1>
+            <h1 class="title">שוּדוּורדל</h1>
         </div>
         <div>
             <img src="wordale-favicon-new.png">
