--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <title>וורדל׳ה - משחק ב-6 ניחושים</title>
-    <meta name="description" content=" וורדל׳ה - וורדל בעברית. משחק יומי בו יש לכם 6 נסיונות לנחש את המילה Wordaleh - Wordle in Hebrew. A daily word game where you have 6 tries to guess the word">
+    <title>שודוורדל</title>
+    <meta name="description" content=" ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -86,7 +86,7 @@
     </div>
     <div id="notify2">
         <div id="timer"></div>
-        &nbsp;:וורדל׳ה חדשה
+        &nbsp;:שוּדוּורדל חדש
         &nbsp;|
      
     </div>
