--- a/index.html
+++ b/index.html
@@ -68,12 +68,14 @@
                 
             }
         </style>
-       
+        <div>
+            <img src="shudu.png">
+        </div>
         <div>
             <h1 class="title">שוּדוּורדל</h1>
         </div>
         <div>
-            <img src="wordale-favicon-new.png">
+            <img src="shudu.png">
         </div>
         <div>&nbsp; </div>
     </div>
