--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             }
         </style>
         <div>
-            <img src="shudu.png">
+            <img src="shudu2.png">
         </div>
         <div>
             <h1 class="title">שוּדוּורדל</h1>
