--- a/index.html
+++ b/index.html
@@ -402,6 +402,9 @@
         </div>
     </div>
     <style>
+        .send{
+            margin-top: 20px;
+        }
         #keyboard {
             display: flexbox;
             padding-top: 10px;
