--- a/index.html
+++ b/index.html
@@ -488,6 +488,7 @@
             <button class="letter" onclick="clickLetter(this.value)" value="ת" id="ת">ת</button>
         </div>
         <div><button class="send" id="send" value="שליחה" onclick="sendWord()">שליחה</button>
+        <div><button class="reset" id="reset" value="איפוס" onclick="reset()">איפוס</button>
         </div>
         <div>
         </div>
