--- a/index.html
+++ b/index.html
@@ -405,6 +405,9 @@
         .send{
             margin-top: 20px;
         }
+        .reset{
+            margin-top: 200px;
+        }
         #keyboard {
             display: flexbox;
             padding-top: 10px;
@@ -450,6 +453,12 @@
         #keyboard .clear{
             color: rgb(235, 235, 235);
             /* width: 70px; */
+            background-color: rgb(110, 110, 110);
+        }
+
+         #keyboard .clear {
+            color: rgb(255, 255, 255);
+            width: clamp(1.5vw,25vw,100px);
             background-color: rgb(110, 110, 110);
         }
 
