--- a/index.html
+++ b/index.html
@@ -407,6 +407,7 @@
         }
         .reset{
             margin-top: 200px;
+            width: 100px;
         }
         #keyboard {
             display: flexbox;
@@ -456,7 +457,7 @@
             background-color: rgb(110, 110, 110);
         }
 
-         #keyboard .clear {
+         #keyboard .reset {
             color: rgb(255, 255, 255);
             width: clamp(1.5vw,25vw,100px);
             background-color: rgb(110, 110, 110);
