--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>שודוורדל</title>
+    <title>שוּדוּוּרְדֵּל</title>
     <meta name="description" content=" ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -72,7 +72,7 @@
             <img src="shudu2.png">
         </div>
         <div>
-            <h1 class="title">שוּדוּורדל</h1>
+            <h1 class="title">שוּדוּוּרְדֵּל</h1>
         </div>
         <div>
             <img src="shudu.png">
@@ -88,7 +88,7 @@
     </div>
     <div id="notify2">
         <div id="timer"></div>
-        &nbsp;:שוּדוּורדל חדש
+        &nbsp;:שוּדוּוּרְדֵּל חדש
         &nbsp;|
      
     </div>
