--- a/index.html
+++ b/index.html
@@ -405,9 +405,11 @@
         .send{
             margin-top: 20px;
         }
-        .reset{
-            margin-top: 200px;
-            width: 100px;
+        .reset {
+             position: fixed;
+              bottom: 0;
+              right: 0;
+              width: 100%;
         }
         #keyboard {
             display: flexbox;
@@ -457,11 +459,7 @@
             background-color: rgb(110, 110, 110);
         }
 
-         #keyboard .reset {
-            color: rgb(255, 255, 255);
-            width: clamp(1.5vw,25vw,100px);
-            background-color: rgb(110, 110, 110);
-        }
+
 
     </style>
     <script>
