--- a/index.html
+++ b/index.html
@@ -413,6 +413,11 @@
               text-align: center;
             
         }
+         .reset {
+             padding: 4px;
+             text-align: center;
+             font-size:clamp(0.3vw,3vw,10px);
+        }
         #keyboard {
             display: flexbox;
             padding-top: 10px;
