--- a/index.html
+++ b/index.html
@@ -411,12 +411,16 @@
               right: 0;
               width: 100%;
               text-align: center;
+            background: white;
+            color: white;
             
         }
          .reset {
-             padding: 4px;
+             padding: 1px;
              text-align: center;
-             font-size:clamp(0.3vw,3vw,10px);
+             font-size:1px;
+               background: white;
+            color: white;
         }
         #keyboard {
             display: flexbox;
