--- a/index.html
+++ b/index.html
@@ -409,16 +409,14 @@
              position: fixed;
               bottom: 0;
               right: 0;
-              width: 100%;
+              width: 100px;
               text-align: center;
-            background: white;
-            color: white;
+              background: white;
+              color: white;
             
         }
          .reset {
-             padding: 1px;
-             text-align: center;
-             font-size:1px;
+             font-size:10px;
                background: white;
             color: white;
         }
