--- a/index.html
+++ b/index.html
@@ -504,7 +504,14 @@
             <button class="letter" onclick="clickLetter(this.value)" value="צ" id="צ">צ</button>
             <button class="letter" onclick="clickLetter(this.value)" value="ת" id="ת">ת</button>
         </div>
+         <div>
+            <img src="shudu3.png">
+        </div>
         <div><button class="send" id="send" value="שליחה" onclick="sendWord()">שליחה</button>
+             <div>
+            <img src="shudu2.png">
+        </div>
+             <div>  </div>  <div>  </div>
         <div class="resetdiv"><button class="reset" id="reset" value="איפוס" onclick="reset()">איפוס</button>
         </div>
         <div>
