--- a/index.html
+++ b/index.html
@@ -467,7 +467,11 @@
             /* width: 70px; */
             background-color: rgb(110, 110, 110);
         }
-
+        #keyboard img{
+           width:clamp(0.5vw,13vw,60px);
+            padding-left: 4px
+             padding-right: 4px
+        }
 
 
     </style>
