--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 
     <div id="notify">
     </div>
-    <div id="notify2">
+     <div id="notify2">
         <div id="timer"></div>
-        &nbsp;:שוּדוּוֹרְדֵּל חדש
+        &nbsp;:וורדל׳ה חדשה
         &nbsp;|
-     
+       <button id="shareButton" onclick="shareResults()">⬆️ שיתוף תוצאות</button>
     </div>
     <style>
         #shareButton {
