--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
             margin-top: 10px;
             color: palevioletred;
             width: clamp(1.5vw,30vw,170px);
-            background-color: palegreen;
+            background-color: yellow;
             rotate: 3deg;
 
         }
